Added libraries and test code for machine learning.